--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mysql": "^2.18.1"
+    "sqlite3": "^5.1.7"
   }
 }
