--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "moment2",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
